# grader

./: .gitignore  CHANGELOG.md  GUIDE-LAYER-NAMING.md  INSTALL-GUIDE-STAFF.md  INSTALL-GUIDE.md  NOTICE-v1.0.0.md  NOTICE-v1.0.2.md  NOTICE-v1.0.3.md  NOTICE-v1.0.4.md  NOTICE-v1.0.5.md  PLAN-AI-TO-SVG.md  PLAN-AUTO-UPDATE.md  PLAN-BAND-POSITION.md  PLAN-GDRIVE-SYNC.md  PLAN-GRADING-REBUILD.md  PLAN-GRADING-RECOVERY.md  PLAN-GRADING-REDESIGN.md  PLAN-PIECE-AWARE-LAYOUT.md  PLAN-POSITION-PIECE-AWARE.md  PLAN-POSITION-REDESIGN.md  PLAN-SVG-STANDARDIZATION.md  PLAN-WORKFLOW-REDESIGN.md  README.md  RELEASE-GUIDE.md  REPORT-CLIPPING.md  REPORT-ELEMENT-REBUILD.md  REPORT-GUIDELINE-FEASIBILITY.md  REPORT-SCALING-STRATEGY.md  REPORT-SIZETAG.md  REPORT-V2-ANALYSIS.md  REPORT.md  UPGRADE-REPORT-2026-04-30.md  build.bat  dev.bat  index.html  package-lock.json  package.json  setup-python.bat  vite.config.ts
.claude/: scratchpad.md  settings.local.json
.claude/knowledge/: architecture.md  (+5 more)
illustrator-scripts/: README.md  ai_to_pdf.jsx  check_area.jsx  check_layers.jsx  config.json  grading-B2-backup.jsx  grading-preB-backup.jsx  grading-preB2-backup.jsx  grading-v1-backup.jsx  grading.jsx
python-engine/: ai_converter.py  main.py  order_parser.py  pattern_scaler.py  pdf_grader.py  pdf_handler.py  requirements.txt  svg_normalizer.py  svg_parser.py
scripts/: bump-version.mjs  sync-bundle-resources.mjs
src/: App.css  App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+42 files in other folders)
