[package]
name = "grader"
version = "1.0.3"
description = "승화전사 유니폼 패턴 자동 생성 프로그램"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "grader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-fs = "2.5.0"
# 자동 업데이트: GitHub Releases에서 새 버전 체크/다운로드/검증
tauri-plugin-updater = "2"
# 재시작/종료 권한: 업데이트 설치 후 앱 재시작에 필요
tauri-plugin-process = "2"

